--- a/anattafrontendkit/src/css/components/_helloBar.css
+++ b/anattafrontendkit/src/css/components/_helloBar.css
@@ -31,6 +31,16 @@
 
 
 .c-topNav {
+
+	@media (--tablet-large){
+		margin-left:70px;
+	}
+	@media (--desktop-large){
+		margin-left:44px;
+	}
+	@media (min-width: 1550px){
+		margin-left:0;
+	}
 	
 }
 	.c-topNav__item {
